--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: 2.7
-sudo: false
+sudo: required
 cache:
   pip: true
   directories:
@@ -24,5 +24,5 @@ after_success:
   - bin/createcoverage
   - pip install coverage==3.7.1 coveralls
   - coveralls
-  - docker.io build --tag plone.restapi:$(git rev-parse HEAD) .
-#  - docker.io push plone/plone.restapi
+  - docker build --tag plone.restapi:$(git rev-parse HEAD) .
+#  - docker push plone/plone.restapi
