--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-# https://github.com/plone/buildout.coredev/blob/5.2/requirements.txt
+# Keep this file in sync with: https://github.com/kitconcept/buildout/edit/master/requirements.txt
 setuptools==40.8.0
 zc.buildout==2.13.1
